rust/macros/tests/invalid/target/debug/deps/single_argument_rs-0b429d1ae6ee0b1a.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-0b429d1ae6ee0b1a.rmeta: single-argument.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-0b429d1ae6ee0b1a.d: single-argument.rs

single-argument.rs:
